[gd_scene load_steps=54 format=3 uid="uid://u7v5bl005qdk"]

[ext_resource type="Script" uid="uid://ggt5cmvo1x0e" path="res://camera_2d.gd" id="1_f3sb7"]
[ext_resource type="Script" uid="uid://bjnbepp44uj62" path="res://world.gd" id="1_mc2jv"]
[ext_resource type="Script" uid="uid://da5sow72ubxcs" path="res://player.gd" id="2_wse8f"]
[ext_resource type="Texture2D" uid="uid://dvi1xxh33twvu" path="res://Sprites/Untitled30_20250831161932.png" id="3_ic0uy"]
[ext_resource type="Texture2D" uid="uid://cgd1exbf6gwpr" path="res://Sprites/Untitled30_20250831161926.png" id="4_k3n1d"]
[ext_resource type="Texture2D" uid="uid://cnspgsshpwy1q" path="res://Sprites/Untitled30_20250831161910.png" id="5_2o6r5"]
[ext_resource type="Texture2D" uid="uid://b3assrse2nufj" path="res://Sprites/Untitled30_20250831161915.png" id="6_70uel"]
[ext_resource type="Texture2D" uid="uid://dphmx35fvn4ax" path="res://Sprites/Untitled30_20250831161920.png" id="7_hiqwa"]
[ext_resource type="Texture2D" uid="uid://cjhpvr75chfwk" path="res://Sprites/Untitled30_20250831183633.png" id="9_bo7i5"]
[ext_resource type="Texture2D" uid="uid://bwxapauoeb28b" path="res://Sprites/Untitled30_20250831183735.png" id="10_4h6ng"]
[ext_resource type="Texture2D" uid="uid://dxgorspc7ikad" path="res://Sprites/Untitled30_20250831133928.png" id="10_ikiii"]
[ext_resource type="Texture2D" uid="uid://di5wwh7hoxkw0" path="res://Sprites/Untitled30_20250831133657.png" id="11_k3n1d"]
[ext_resource type="Script" uid="uid://4k40e7fkqo3h" path="res://text_level.gd" id="12_2o6r5"]
[ext_resource type="Texture2D" uid="uid://b6k0g5754q0qa" path="res://Sprites/Untitled30_20250831133919.png" id="13_wukud"]
[ext_resource type="Texture2D" uid="uid://bbqgwfmdk8d1s" path="res://Sprites/Untitled30_20250831133712.png" id="14_il2jm"]
[ext_resource type="Texture2D" uid="uid://djqwf7lxivj" path="res://Sprites/Untitled30_20250831133718.png" id="15_wjb0r"]
[ext_resource type="Texture2D" uid="uid://bnsf5b7b0ksi8" path="res://Sprites/Untitled30_20250831133723.png" id="16_mc2jv"]
[ext_resource type="Texture2D" uid="uid://d3148su5npmvk" path="res://Sprites/Untitled30_20250831133728.png" id="17_bo7i5"]
[ext_resource type="Texture2D" uid="uid://dmee3bpwolu6n" path="res://Sprites/Untitled30_20250831133735.png" id="18_4h6ng"]
[ext_resource type="Texture2D" uid="uid://b5rsiwp61fm1p" path="res://Sprites/Untitled30_20250831133739.png" id="19_o3ebs"]
[ext_resource type="Texture2D" uid="uid://buxc6trov8442" path="res://Sprites/Untitled30_20250831133903.png" id="20_k83mh"]
[ext_resource type="Texture2D" uid="uid://ca4l1wemhblq7" path="res://Sprites/Untitled30_20250831133909.png" id="21_qktwf"]
[ext_resource type="Texture2D" uid="uid://18ldkp3tupv8" path="res://Sprites/Untitled30_20250831133914.png" id="22_bh8nc"]
[ext_resource type="Script" uid="uid://c58lgdu4sixgl" path="res://text_level_number.gd" id="24_o3ebs"]
[ext_resource type="Texture2D" uid="uid://k6qepw4nl47h" path="res://Sprites/Untitled30_20250831215124.png" id="25_4h6ng"]
[ext_resource type="Script" uid="uid://4kngteipjifd" path="res://text_lives.gd" id="26_o3ebs"]
[ext_resource type="Script" uid="uid://cqhdn0b6cydmt" path="res://hurter_spawner.gd" id="28_o3ebs"]
[ext_resource type="Texture2D" uid="uid://cpi1r2ydfod5s" path="res://Sprites/Untitled20_20250901112951.png" id="28_qktwf"]
[ext_resource type="Texture2D" uid="uid://0jwaixksff1d" path="res://Sprites/Untitled30_20250831215146.png" id="29_bh8nc"]
[ext_resource type="Script" uid="uid://c4mi3k1apky46" path="res://sprite_lives.gd" id="30_jjr1n"]
[ext_resource type="Script" uid="uid://b007uf20lafvi" path="res://text_lives_number.gd" id="31_bh8nc"]
[ext_resource type="Texture2D" uid="uid://de1v1g16rdy21" path="res://Sprites/Untitled30_20250901153623.png" id="32_gggvi"]
[ext_resource type="Texture2D" uid="uid://bmppm2g3cqrca" path="res://Sprites/Untitled30_20250901190305.png" id="32_w44yn"]
[ext_resource type="Script" uid="uid://bc5vptw6stlwv" path="res://text_score.gd" id="33_w44yn"]
[ext_resource type="AudioStream" uid="uid://7p8kpr3vlgl1" path="res://sfx_and_bgm/bgm_test.mp3" id="35_6ah6f"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cbp6q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ic0uy")
}, {
"duration": 1.0,
"texture": ExtResource("4_k3n1d")
}, {
"duration": 1.0,
"texture": ExtResource("5_2o6r5")
}, {
"duration": 1.0,
"texture": ExtResource("6_70uel")
}, {
"duration": 1.0,
"texture": ExtResource("7_hiqwa")
}, {
"duration": 1.0,
"texture": ExtResource("6_70uel")
}, {
"duration": 1.0,
"texture": ExtResource("5_2o6r5")
}, {
"duration": 1.0,
"texture": ExtResource("4_k3n1d")
}],
"loop": true,
"name": &"wings_flap",
"speed": 7.5
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_26xuy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_bo7i5")
}, {
"duration": 1.0,
"texture": ExtResource("10_4h6ng")
}],
"loop": true,
"name": &"player",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ic0uy")
}, {
"duration": 1.0,
"texture": ExtResource("4_k3n1d")
}, {
"duration": 1.0,
"texture": ExtResource("5_2o6r5")
}, {
"duration": 1.0,
"texture": ExtResource("6_70uel")
}, {
"duration": 1.0,
"texture": ExtResource("7_hiqwa")
}, {
"duration": 1.0,
"texture": ExtResource("6_70uel")
}, {
"duration": 1.0,
"texture": ExtResource("5_2o6r5")
}, {
"duration": 1.0,
"texture": ExtResource("4_k3n1d")
}],
"loop": true,
"name": &"player_wings",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_bc84e"]
radius = 11.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wukud"]
size = Vector2(68, 660)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_il2jm"]
size = Vector2(68, 660)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wjb0r"]
size = Vector2(547, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4h6ng"]
size = Vector2(547, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_qktwf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_wukud")
}, {
"duration": 1.0,
"texture": ExtResource("14_il2jm")
}, {
"duration": 1.0,
"texture": ExtResource("15_wjb0r")
}, {
"duration": 1.0,
"texture": ExtResource("16_mc2jv")
}, {
"duration": 1.0,
"texture": ExtResource("17_bo7i5")
}, {
"duration": 1.0,
"texture": ExtResource("18_4h6ng")
}, {
"duration": 1.0,
"texture": ExtResource("19_o3ebs")
}, {
"duration": 1.0,
"texture": ExtResource("20_k83mh")
}, {
"duration": 1.0,
"texture": ExtResource("21_qktwf")
}, {
"duration": 1.0,
"texture": ExtResource("22_bh8nc")
}],
"loop": true,
"name": &"custom_numbers",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_jjr1n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_wukud")
}, {
"duration": 1.0,
"texture": ExtResource("14_il2jm")
}, {
"duration": 1.0,
"texture": ExtResource("15_wjb0r")
}, {
"duration": 1.0,
"texture": ExtResource("16_mc2jv")
}, {
"duration": 1.0,
"texture": ExtResource("17_bo7i5")
}, {
"duration": 1.0,
"texture": ExtResource("18_4h6ng")
}, {
"duration": 1.0,
"texture": ExtResource("19_o3ebs")
}, {
"duration": 1.0,
"texture": ExtResource("20_k83mh")
}, {
"duration": 1.0,
"texture": ExtResource("21_qktwf")
}, {
"duration": 1.0,
"texture": ExtResource("22_bh8nc")
}],
"loop": true,
"name": &"life_number",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_6ah6f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_wukud")
}, {
"duration": 1.0,
"texture": ExtResource("14_il2jm")
}, {
"duration": 1.0,
"texture": ExtResource("15_wjb0r")
}, {
"duration": 1.0,
"texture": ExtResource("16_mc2jv")
}, {
"duration": 1.0,
"texture": ExtResource("17_bo7i5")
}, {
"duration": 1.0,
"texture": ExtResource("18_4h6ng")
}, {
"duration": 1.0,
"texture": ExtResource("19_o3ebs")
}, {
"duration": 1.0,
"texture": ExtResource("20_k83mh")
}, {
"duration": 1.0,
"texture": ExtResource("21_qktwf")
}, {
"duration": 1.0,
"texture": ExtResource("22_bh8nc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_g1i3r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_wukud")
}, {
"duration": 1.0,
"texture": ExtResource("14_il2jm")
}, {
"duration": 1.0,
"texture": ExtResource("15_wjb0r")
}, {
"duration": 1.0,
"texture": ExtResource("16_mc2jv")
}, {
"duration": 1.0,
"texture": ExtResource("17_bo7i5")
}, {
"duration": 1.0,
"texture": ExtResource("18_4h6ng")
}, {
"duration": 1.0,
"texture": ExtResource("19_o3ebs")
}, {
"duration": 1.0,
"texture": ExtResource("20_k83mh")
}, {
"duration": 1.0,
"texture": ExtResource("21_qktwf")
}, {
"duration": 1.0,
"texture": ExtResource("22_bh8nc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_my276"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_wukud")
}, {
"duration": 1.0,
"texture": ExtResource("14_il2jm")
}, {
"duration": 1.0,
"texture": ExtResource("15_wjb0r")
}, {
"duration": 1.0,
"texture": ExtResource("16_mc2jv")
}, {
"duration": 1.0,
"texture": ExtResource("17_bo7i5")
}, {
"duration": 1.0,
"texture": ExtResource("18_4h6ng")
}, {
"duration": 1.0,
"texture": ExtResource("19_o3ebs")
}, {
"duration": 1.0,
"texture": ExtResource("20_k83mh")
}, {
"duration": 1.0,
"texture": ExtResource("21_qktwf")
}, {
"duration": 1.0,
"texture": ExtResource("22_bh8nc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_yx0jh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_wukud")
}, {
"duration": 1.0,
"texture": ExtResource("14_il2jm")
}, {
"duration": 1.0,
"texture": ExtResource("15_wjb0r")
}, {
"duration": 1.0,
"texture": ExtResource("16_mc2jv")
}, {
"duration": 1.0,
"texture": ExtResource("17_bo7i5")
}, {
"duration": 1.0,
"texture": ExtResource("18_4h6ng")
}, {
"duration": 1.0,
"texture": ExtResource("19_o3ebs")
}, {
"duration": 1.0,
"texture": ExtResource("20_k83mh")
}, {
"duration": 1.0,
"texture": ExtResource("21_qktwf")
}, {
"duration": 1.0,
"texture": ExtResource("22_bh8nc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_1ew0l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_wukud")
}, {
"duration": 1.0,
"texture": ExtResource("14_il2jm")
}, {
"duration": 1.0,
"texture": ExtResource("15_wjb0r")
}, {
"duration": 1.0,
"texture": ExtResource("16_mc2jv")
}, {
"duration": 1.0,
"texture": ExtResource("17_bo7i5")
}, {
"duration": 1.0,
"texture": ExtResource("18_4h6ng")
}, {
"duration": 1.0,
"texture": ExtResource("19_o3ebs")
}, {
"duration": 1.0,
"texture": ExtResource("20_k83mh")
}, {
"duration": 1.0,
"texture": ExtResource("21_qktwf")
}, {
"duration": 1.0,
"texture": ExtResource("22_bh8nc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ryup7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_wukud")
}, {
"duration": 1.0,
"texture": ExtResource("14_il2jm")
}, {
"duration": 1.0,
"texture": ExtResource("15_wjb0r")
}, {
"duration": 1.0,
"texture": ExtResource("16_mc2jv")
}, {
"duration": 1.0,
"texture": ExtResource("17_bo7i5")
}, {
"duration": 1.0,
"texture": ExtResource("18_4h6ng")
}, {
"duration": 1.0,
"texture": ExtResource("19_o3ebs")
}, {
"duration": 1.0,
"texture": ExtResource("20_k83mh")
}, {
"duration": 1.0,
"texture": ExtResource("21_qktwf")
}, {
"duration": 1.0,
"texture": ExtResource("22_bh8nc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ytpkv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_wukud")
}, {
"duration": 1.0,
"texture": ExtResource("14_il2jm")
}, {
"duration": 1.0,
"texture": ExtResource("15_wjb0r")
}, {
"duration": 1.0,
"texture": ExtResource("16_mc2jv")
}, {
"duration": 1.0,
"texture": ExtResource("17_bo7i5")
}, {
"duration": 1.0,
"texture": ExtResource("18_4h6ng")
}, {
"duration": 1.0,
"texture": ExtResource("19_o3ebs")
}, {
"duration": 1.0,
"texture": ExtResource("20_k83mh")
}, {
"duration": 1.0,
"texture": ExtResource("21_qktwf")
}, {
"duration": 1.0,
"texture": ExtResource("22_bh8nc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_jas3d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_wukud")
}, {
"duration": 1.0,
"texture": ExtResource("14_il2jm")
}, {
"duration": 1.0,
"texture": ExtResource("15_wjb0r")
}, {
"duration": 1.0,
"texture": ExtResource("16_mc2jv")
}, {
"duration": 1.0,
"texture": ExtResource("17_bo7i5")
}, {
"duration": 1.0,
"texture": ExtResource("18_4h6ng")
}, {
"duration": 1.0,
"texture": ExtResource("19_o3ebs")
}, {
"duration": 1.0,
"texture": ExtResource("20_k83mh")
}, {
"duration": 1.0,
"texture": ExtResource("21_qktwf")
}, {
"duration": 1.0,
"texture": ExtResource("22_bh8nc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_7htu6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_wukud")
}, {
"duration": 1.0,
"texture": ExtResource("14_il2jm")
}, {
"duration": 1.0,
"texture": ExtResource("15_wjb0r")
}, {
"duration": 1.0,
"texture": ExtResource("16_mc2jv")
}, {
"duration": 1.0,
"texture": ExtResource("17_bo7i5")
}, {
"duration": 1.0,
"texture": ExtResource("18_4h6ng")
}, {
"duration": 1.0,
"texture": ExtResource("19_o3ebs")
}, {
"duration": 1.0,
"texture": ExtResource("20_k83mh")
}, {
"duration": 1.0,
"texture": ExtResource("21_qktwf")
}, {
"duration": 1.0,
"texture": ExtResource("22_bh8nc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="World" type="Node2D"]
script = ExtResource("1_mc2jv")
metadata/_edit_horizontal_guides_ = [-643.0]
metadata/_edit_vertical_guides_ = [-456.0]

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("1_f3sb7")

[node name="Player" type="CharacterBody2D" parent="."]
script = ExtResource("2_wse8f")

[node name="AnimatedSpriteWings" type="AnimatedSprite2D" parent="Player"]
position = Vector2(0, -4.5)
scale = Vector2(1.4, 1.4)
sprite_frames = SubResource("SpriteFrames_cbp6q")
animation = &"wings_flap"
frame = 5
frame_progress = 0.707015

[node name="AnimatedSpritePlayer" type="AnimatedSprite2D" parent="Player"]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_26xuy")
animation = &"player"

[node name="CollisionShapePlayer" type="CollisionShape2D" parent="Player"]
position = Vector2(2, 6)
shape = SubResource("CircleShape2D_bc84e")

[node name="point_adder" type="Timer" parent="Player"]
wait_time = 0.05
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 5
texture = ExtResource("10_ikiii")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-290, -4)
shape = SubResource("RectangleShape2D_wukud")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(310, -4)
shape = SubResource("RectangleShape2D_il2jm")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(15.5, -294)
shape = SubResource("RectangleShape2D_wjb0r")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(15.5, 356)
shape = SubResource("RectangleShape2D_4h6ng")

[node name="Text_level" type="Sprite2D" parent="."]
z_index = 6
position = Vector2(-56, -277)
texture = ExtResource("11_k3n1d")
script = ExtResource("12_2o6r5")

[node name="Text_level_number" type="AnimatedSprite2D" parent="."]
z_index = 6
position = Vector2(72, -292)
sprite_frames = SubResource("SpriteFrames_qktwf")
animation = &"custom_numbers"
script = ExtResource("24_o3ebs")

[node name="Text_Lives" type="Sprite2D" parent="."]
z_index = 6
position = Vector2(-355, -118)
texture = ExtResource("25_4h6ng")
script = ExtResource("26_o3ebs")

[node name="hurter_spawner" type="Node2D" parent="."]
script = ExtResource("28_o3ebs")

[node name="hurter_spawn_delay" type="Timer" parent="hurter_spawner"]
wait_time = 0.2
autostart = true

[node name="lives_count" type="Sprite2D" parent="."]
z_index = 6
position = Vector2(-326, -65)
texture = ExtResource("28_qktwf")

[node name="sprite_lives" type="Sprite2D" parent="."]
z_index = 6
position = Vector2(-363, -70)
texture = ExtResource("29_bh8nc")
offset = Vector2(1.3, -5.5)
script = ExtResource("30_jjr1n")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="text_lives_number" type="AnimatedSprite2D" parent="."]
z_index = 6
position = Vector2(-293, -65)
sprite_frames = SubResource("SpriteFrames_jjr1n")
animation = &"life_number"
script = ExtResource("31_bh8nc")

[node name="game_over_bg" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.188235, 0.188235, 0.188235, 1)
self_modulate = Color(0.188235, 0.188235, 0.188235, 1)
z_index = 8
texture = ExtResource("32_w44yn")

[node name="text_score" type="Sprite2D" parent="."]
z_index = 6
position = Vector2(345, -80)
scale = Vector2(0.8, 0.8)
texture = ExtResource("32_gggvi")
script = ExtResource("33_w44yn")

[node name="score_0" type="AnimatedSprite2D" parent="text_score"]
position = Vector2(255, 0)
scale = Vector2(0.65, 0.65)
sprite_frames = SubResource("SpriteFrames_6ah6f")

[node name="score_1" type="AnimatedSprite2D" parent="text_score"]
position = Vector2(235, 0)
scale = Vector2(0.65, 0.65)
sprite_frames = SubResource("SpriteFrames_g1i3r")

[node name="score_2" type="AnimatedSprite2D" parent="text_score"]
position = Vector2(215, 7.62939e-06)
scale = Vector2(0.65, 0.65)
sprite_frames = SubResource("SpriteFrames_my276")

[node name="score_3" type="AnimatedSprite2D" parent="text_score"]
position = Vector2(193.75, 7.62939e-06)
scale = Vector2(0.65, 0.65)
sprite_frames = SubResource("SpriteFrames_yx0jh")

[node name="score_4" type="AnimatedSprite2D" parent="text_score"]
position = Vector2(173.75, 7.62939e-06)
scale = Vector2(0.65, 0.65)
sprite_frames = SubResource("SpriteFrames_1ew0l")

[node name="score_5" type="AnimatedSprite2D" parent="text_score"]
position = Vector2(153.75, 7.62939e-06)
scale = Vector2(0.65, 0.65)
sprite_frames = SubResource("SpriteFrames_ryup7")

[node name="score_6" type="AnimatedSprite2D" parent="text_score"]
position = Vector2(131.25, 7.62939e-06)
scale = Vector2(0.65, 0.65)
sprite_frames = SubResource("SpriteFrames_ytpkv")

[node name="score_7" type="AnimatedSprite2D" parent="text_score"]
position = Vector2(111.25, 0)
scale = Vector2(0.65, 0.65)
sprite_frames = SubResource("SpriteFrames_jas3d")

[node name="score_8" type="AnimatedSprite2D" parent="text_score"]
position = Vector2(91.25, 7.62939e-06)
scale = Vector2(0.65, 0.65)
sprite_frames = SubResource("SpriteFrames_7htu6")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("35_6ah6f")
parameters/looping = false

[connection signal="timeout" from="Player/point_adder" to="Player" method="_on_point_adder_timeout"]
[connection signal="timeout" from="hurter_spawner/hurter_spawn_delay" to="hurter_spawner" method="_on_hurter_spawn_delay_timeout"]
